--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,24 +7,24 @@
 
 <meta name="theme-color" content="#FFFFFF">
 <meta name="mobile-web-app-capable" content="yes">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ site.url }}/manifest.json">
 
 <meta name="application-name" content="{{ site.name }}">
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-tooltip" content="{{ site.description }}">
-<meta name="msapplication-config" content="/ieconfig.xml">
+<meta name="msapplication-config" content="{{ site.url }}/ieconfig.xml">
 
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="icon" sizes="16x16" href="/favicon.ico">
-<link rel="icon" sizes="24x24" href="/images/favicon-24.ico">
-<link rel="icon" sizes="32x32" href="/images/favicon-32.ico">
-<link rel="icon" sizes="48x48" href="/images/favicon-48.ico">
-<link rel="icon" sizes="64x64" href="/images/favicon-64.ico">
+<link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+<link rel="icon" sizes="16x16" href="{{ site.url }}/favicon.ico">
+<link rel="icon" sizes="24x24" href="{{ site.url }}/images/favicon-24.ico">
+<link rel="icon" sizes="32x32" href="{{ site.url }}/images/favicon-32.ico">
+<link rel="icon" sizes="48x48" href="{{ site.url }}/images/favicon-48.ico">
+<link rel="icon" sizes="64x64" href="{{ site.url }}/images/favicon-64.ico">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="white">
 <meta name="apple-mobile-web-app-title" content="{{ site.name }}">
-<link rel="apple-touch-icon-precomposed" href="/images/favicon-152.png">
+<link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/favicon-152.png">
 
 <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
