--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	{% include head.html %}
 </head>
 <body>
-	<a href="/" class="banner"><h1 class="banner__container"><img class="banner__icon" src="/images/favicon.svg">&nbsp;<span class="banner__name">{{ site.name }}</span></h1></a>
+	<a href="{{ site.url }}" class="banner"><h1 class="banner__container"><img class="banner__icon" src="{{ site.url }}/images/favicon.svg">&nbsp;<span class="banner__name">{{ site.name }}</span></h1></a>
 	{{ content }}
 </body>
 </html>
