random assorted comic page-related changes

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -1,3 +1,8 @@
 ---
 layout: default
 ---
+
+<main>
+	<h3 class="title">{{ page.title }}</h3>
+	<img class="img--wide" src="{{ page.image }}">
+</main>
