--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,5 @@
 layout: default
 ---
 
+<a href="{{ site.url }}" class="banner"><h1 class="banner__container"><img class="banner__icon" src="{{ site.url }}/images/favicon.svg">&nbsp;<span class="banner__name">{{ site.name }}</span></h1></a>
 
