add comic ids, fix image url

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -4,5 +4,5 @@ layout: default
 
 <main>
 	<h3 class="title">{{ page.title }}</h3>
-	<img class="img--wide" src="{{ page.image }}">
+	<img class="img--wide" src="{{ site.url }}{{ page.image }}">
 </main>
