--- a/css/styles.scss
+++ b/css/styles.scss
@@ -104,6 +104,7 @@ a:focus {
 @import "elements/img.scss";
 @import "elements/banner.scss";
 @import "elements/paper.scss";
+@import "elements/paginator.scss";
 
 main {
 	display: block;
