--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -37,3 +37,11 @@ layout: default
 		</a>
 	</div>
 </main>
+
+<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+<script type="text/javascript">
+	document.getElementsByClassName("paper")[0].isotope({
+		layoutMode: "packery",
+		itemSelector: ".paper__item"
+	});
+</script>
