--- a/css/elements/paper.scss
+++ b/css/elements/paper.scss
@@ -1,22 +1,20 @@
 .paper {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-items: stretch;
-	justify-content: space-evenly;
 	margin: 0 -1em;
+	text-align: center;
 }
 
 .paper__item {
-	flex-grow: 1;
-	width: 36%;
+	display: inline-block;
+	height: 200px;
 	padding: .5em 1em;
 }
 
 .paper__item__title {
 	margin: 0;
+	text-align: left;
+	text-align: start;
 }
 
 .paper__item__image {
-	width: 100%;
+	height: calc(100% - 1.5em);
 }
