--- a/css/styles.scss
+++ b/css/styles.scss
@@ -103,6 +103,7 @@ a:focus {
 
 @import "elements/img.scss";
 @import "elements/banner.scss";
+@import "elements/dialog.scss";
 @import "elements/paper.scss";
 @import "elements/paginator.scss";
 
