implement popup dialogs, responsive design, etc

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -4,5 +4,7 @@ layout: default
 
 <main>
 	<h3 class="title">{{ page.title }}</h3>
-	<img class="img--wide" src="{{ site.url }}{{ page.image }}">
+	<div class="img__container--wide">
+		<img class="img--wide" src="{{ site.url }}{{ page.image }}">
+	</div>
 </main>
