--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,12 +44,21 @@ layout: default
 
 <script>
 	var dialogElement = document.getElementById("comic_dialog");
-	var comicElement = document.getElementById("comic_iframe");
+	var dialogCloseElement = document.getElementById("comic_close");
+	var dialogComicElement = document.getElementById("comic_iframe");
 	var comics = document.getElementsByClassName("paper__item");
 
+	dialogCloseElement.addEventListener("click", function() {
+		dialogElement.classList.add("dialog--hidden");
+	});
+
 	for (var i in comics) {
+		if (!comics[i] || !comics[i].addEventListener)
+			continue;
+		
 		comics[i].addEventListener("click", function() {
-			comicElement.src = "{{ site.url }}" + this.getAttribute("data-url");
+			dialogComicElement.src = "{{ site.url }}" + this.getAttribute("data-url");
+			dialogElement.classList.remove("dialog--hidden");
 		});
 	}
 </script>
