--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -1,21 +1,26 @@
 .dialog {
 	position: fixed;
+	z-index: 1;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.25);
-	padding: calc(10vw + 64px);
+	padding: calc(10vw + 24px);
+	opacity: 1;
+	transition: opacity .25s;
 }
 
 .dialog--hidden {
-	display: none;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity .25s, visibility 0s .25s;
 }
 
 .dialog__close {
 	position: absolute;
-	top: calc(10vw + 96px);
-	right: calc(10vw + 96px);
+	top: calc(10vw + 56px);
+	right: calc(10vw + 56px);
 }
 
 .dialog__content {
@@ -23,5 +28,5 @@
 	width: 100%;
 	height: 100%;
 	background-color: #FFF;
-	border-radius: 15px;
+	border-radius: 8px;
 }
