--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,10 +6,8 @@ layout: default
 
 <main>
 	<div class="paper">
-		{% assign start = page.start | minus: 1 %}
-		{% assign end = page.end | minus: 1 %}
-		{% for i in (start..end) %}
-		{% assign comic = site.comics[i] %}
+		{% for i in (page.start..page.end) %}
+		{% assign comic = site.comics | where: "slug", i | first %}
 		<a class="paper__item" data-url="{{ comic.url }}"><h4 class="paper__item__title">{{ comic.title }}</h4><img class="img paper__item__image" src="{{ site.url }}{{ comic.image }}"></a>
 		{% endfor %}
 	</div>
