start integrating disqus comments

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -7,4 +7,6 @@ layout: default
 	<div class="img__container--wide">
 		<img class="img--wide" src="{{ site.url }}{{ page.image }}">
 	</div>
+	<br><br>
+	{% include comments.html %}
 </main>
