--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,13 +1,13 @@
 <div id="disqus_thread"></div>
 <script>
 	var disqus_config = function() {
-		this.page.url = "{{ page.url }}";
+		this.page.url = "{{ site.url }}{{ page.url }}";
 		this.page.identifier = "{{ page.slug }}";
 	};
 
 	(function() {
 		var d = document, s = d.createElement('script');
-		s.src = 'https://the-newspanels.disqus.com/embed.js';
+		s.src = '//the-newspanels.disqus.com/embed.js';
 		s.setAttribute('data-timestamp', + new Date());
 		(d.head || d.body).appendChild(s);
 	})();
