make small comments not take up the entire viewport on desktop

--- a/css/elements/img.scss
+++ b/css/elements/img.scss
@@ -17,12 +17,11 @@
 		margin: 0;
 		overflow-x: hidden;
 		min-height: auto;
-		text-align: left;
-		text-align: start;
 	}
 
 	.img--wide {
 		width: 100%;
 		height: auto;
+		max-height: 40vh;
 	}
 }
