--- a/css/elements/img.scss
+++ b/css/elements/img.scss
@@ -1,27 +1,39 @@
 .img__container--wide {
-	width: 100vw;
+	position: relative;
+	width: calc(100% + 20vw);
 	margin: 0 -10vw;
 	overflow-x: auto;
-	min-height: 50vh;
+	height: 50vh;
+	max-height: 500px;
 	text-align: center;
 }
 
 .img--wide {
+	position: absolute;
 	width: auto;
+	min-width: 100%;
 	height: 100%;
+	top: 0;
+	left: 0;
 }
 
 @media(min-width: 1000px) {
 	.img__container--wide {
+		position: unset;
 		width: 100%;
 		margin: 0;
-		overflow-x: hidden;
+		height: auto;
 		min-height: auto;
+		max-height: 100vh;
+		overflow-x: hidden;
 	}
 
 	.img--wide {
+		position: unset;
 		width: 100%;
+		min-width: auto;
 		height: auto;
+		min-height: 300px;
 		max-height: 40vh;
 	}
 }
