--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -6,7 +6,6 @@
 	right: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.25);
-	padding: calc(10vw + 24px);
 	opacity: 1;
 	transition: opacity .25s;
 }
@@ -19,14 +18,36 @@
 
 .dialog__close {
 	position: absolute;
-	top: calc(10vw + 56px);
-	right: calc(10vw + 56px);
+	top: calc(10% + 24px);
+	right: 24px;
+	z-index: 2;
 }
 
 .dialog__content {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	border: none;
 	width: 100%;
-	height: 100%;
+	height: 90%;
 	background-color: #FFF;
 	border-radius: 8px;
+}
+
+@media(min-width: 1000px) {
+	.dialog {
+		padding: calc(10vw + 24px);
+	}
+
+	.dialog__close {
+		top: calc(10vw + 56px);
+		right: calc(10vw + 56px);
+	}
+
+	.dialog__content {
+		position: unset;
+		height: 100%;
+		border-radius: 8px;
+	}
 }
