--- a/css/styles.scss
+++ b/css/styles.scss
@@ -107,6 +107,7 @@ a:focus {
 @import "elements/paper.scss";
 @import "elements/paginator.scss";
 @import "elements/title.scss";
+@import "elements/link.scss";
 
 main {
 	display: block;
