--- a/_layouts/layout-1.html
+++ b/_layouts/layout-1.html
@@ -3,27 +3,29 @@ layout: page
 ---
 
 <div class="paper">
-	{% assign num = page.start %}    <!-- 1. 8x2 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comics = site.comics | sort: "hash" %}
+
+	{% assign num = page.start | minus: 1 %} <!-- 1. 8x2 layout -->
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=1 rowEnd=3 colStart=1 colEnd=9 %}
 
 	{% assign num = num | plus: 1 %} <!-- 2. 6x2 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=3 rowEnd=5 colStart=1 colEnd=7 %}
 
 	{% assign num = num | plus: 1 %} <!-- 3. 6x2 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=5 rowEnd=7 colStart=1 colEnd=7 %}
 
 	{% assign num = num | plus: 1 %} <!-- 4. 6x2 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=7 rowEnd=9 colStart=1 colEnd=7 %}
 
 	{% assign num = num | plus: 1 %} <!-- 5. 6x1 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=9 rowEnd=10 colStart=1 colEnd=7 %}
 
 	{% assign num = num | plus: 1 %} <!-- 6. 2x7 layout -->
-	{% assign comic = site.comics | where: "slug", num | first %}
+	{% assign comic = comics[num] %}
 	{% include comic.html comic=comic rowStart=3 rowEnd=11 colStart=7 colEnd=9 %}
 </div>
