--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,24 +8,26 @@ layout: default
 	{{ content }}
 	
 	<div class="paginator">
-		{% assign first = site.pages | first %}
+		{% assign pages = site.pages | sort: "hash" %}
+	
+		{% assign first = pages | first %}
 		<a class="paginator__icon{% if first.url == page.url %} paginator__icon--disabled{% endif %}" href="{{ site.url }}{{ first.url }}">
 			<i class="material-icons">first_page</i>
 		</a>
-		{% assign previousNum = page.slug | minus: 1 %}
-		{% assign previous = site.pages | where: "slug", previousNum | first %}
+		{% assign previousNum = page.hash | minus: 2 %}
+		{% if previousNum >= 0 %}{% assign previous = pages[previousNum] %}{% endif %}
 		<a class="paginator__icon{% if previous %}{% else %} paginator__icon--disabled{% endif %}" href="{{ site.url }}{{ previous.url }}">
 			<i class="material-icons">navigate_before</i>
 		</a>
 
-		<span class="paginator__text">{{ page.slug }} of {{ site.pages.size }}</span>
+		<span class="paginator__text">{{ page.hash | plus: 0 }} of {{ site.pages.size }}</span>
 		
-		{% assign nextNum = page.slug | plus: 1 %}
-		{% assign next = site.pages | where: "slug", nextNum | first %}
+		{% assign nextNum = page.hash | plus: 0 %}
+		{% assign next = pages[nextNum] %}
 		<a class="paginator__icon{% if next %}{% else %} paginator__icon--disabled{% endif %}" href="{{ site.url }}{{ next.url }}">
 			<i class="material-icons">navigate_next</i>
 		</a>
-		{% assign last = site.pages | last %}
+		{% assign last = pages | last %}
 		<a class="paginator__icon{% if last.url == page.url %} paginator__icon--disabled{% endif %}" href="{{ site.url }}{{ last.url }}">
 			<i class="material-icons">last_page</i>
 		</a>
