--- a/css/elements/paper.scss
+++ b/css/elements/paper.scss
@@ -8,6 +8,14 @@
 .paper__item {
 	display: inline-block;
 	position: relative;
+	transition: box-shadow .25s;
+}
+
+.paper__item:hover,
+.paper__item:focus {
+	outline: none;
+	box-shadow: 0 0.4em 1.2em rgba(0, 72, 117, 0.37);
+	box-shadow: 0 0.4em 1.2em var(--accent-outline-fade);
 }
 
 .paper__item__title {
