--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,6 +46,7 @@ layout: default
 
 	var f = function() {
 		dialogElement.classList.add("dialog--hidden");
+		document.body.classList.remove("--dialog");
 	};
 
 	dialogCloseElement.addEventListener("click", f);
@@ -58,6 +59,7 @@ layout: default
 		comics[i].addEventListener("click", function() {
 			dialogComicElement.src = "{{ site.url }}" + this.getAttribute("data-url");
 			dialogElement.classList.remove("dialog--hidden");
+			document.body.classList.add("--dialog");
 		});
 	}
 </script>
