--- a/css/styles.scss
+++ b/css/styles.scss
@@ -57,6 +57,10 @@ body {
 	-webkit-transition: background-color .25s;
 }
 
+body.--dialog {
+	overflow: hidden;
+}
+
 p {
 	color: #616161;
 	color: var(--normal-color-text);
