--- a/css/elements/paginator.scss
+++ b/css/elements/paginator.scss
@@ -9,12 +9,24 @@
 
 .paginator__icon,
 .paginator__text {
-	padding: 0 12px;
+	margin: 0 12px;
 	user-select: none;
 }
 
 .paginator__icon {
 	text-decoration: none;
+	padding: 8px;
+	background-color: rgba(0, 0, 0, 0);
+	border-radius: 50%;
+	transition: background-color .25s;
+}
+
+.paginator__icon:hover {
+	background-color: rgba(0, 0, 0, 0.15);
+}
+
+.paginator__icon > .material-icons {
+	display: block;
 }
 
 .paginator__icon--disabled {
