implement comic descriptions/subtext

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -33,6 +33,8 @@ layout: default
 			<i class="material-icons">last_page</i>
 		</a>
 	</div>
-	<br><br>
+	<br>
+	{{ content }}
+	<br>
 	{% include comments.html %}
 </main>
