add example footer / about page

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -112,6 +112,7 @@ a:focus {
 @import "elements/paginator.scss";
 @import "elements/title.scss";
 @import "elements/link.scss";
+@import "elements/footer.scss";
 
 main {
 	display: block;
