--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -56,17 +56,21 @@ layout: default
 	dialogCloseElement.addEventListener("click", onClose);
 	dialogElement.addEventListener("click", onClose);
 
+	function onClick() {
+		dialogComicElement.src = "{{ site.url }}" + this.getAttribute("data-url");
+		dialogElement.classList.remove("dialog--hidden");
+		document.body.classList.add("--dialog");
+		window.location.hash = this.getAttribute("data-slug");
+	}
+
 	// apply listeners to comic classes; open dialog when clicked
 	for (var i in comics) {
 		if (!comics[i] || !comics[i].addEventListener)
 			continue;
 
-		comics[i].addEventListener("click", function() {
-			dialogComicElement.src = "{{ site.url }}" + this.getAttribute("data-url");
-			dialogElement.classList.remove("dialog--hidden");
-			document.body.classList.add("--dialog");
-			window.location.hash = this.getAttribute("data-slug");
-		});
+		comics[i].addEventListener("click", onClick);
+		comics[i].addEventListener("touchstart click", onClick);
+		comics[i].addEventListener("click tap", onClick);
 	}
 
 	// change hash on dialog change (ex: pagination widget used)
