add 404 page, fix margins

--- a/css/elements/footer.scss
+++ b/css/elements/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	margin-left: calc(20vw - 50px);
-	margin-right: calc(20vw - 50px);
+	margin-left: 2vw;
+	margin-right: 2vw;
 	margin-bottom: 8em;
 }
