--- a/css/styles.scss
+++ b/css/styles.scss
@@ -123,3 +123,8 @@ main {
 	-moz-transition: transform .25s;
 	-webkit-transition: transform .25s;
 }
+
+.--content {
+	margin-left: 10vw;
+	margin-right: 10vw;
+}
