find the window event properly

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -62,7 +62,9 @@ layout: default
 			slug = this.getAttribute("data-slug");
 		}
 
-		event = event || window.event;
+		if (!event || !event.preventDefault)
+			event = window.event;
+		
 		if (url && slug && event)
 			event.preventDefault();
 	
