--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -11,9 +11,11 @@
 }
 
 .dialog--hidden {
+	z-index: -1;
+	display: none;
 	opacity: 0;
 	visibility: hidden;
-	transition: opacity .25s, visibility 0s .25s;
+	transition: opacity .25s, display 0s .25s, visibility 0s .25s;
 }
 
 .dialog__close {
