--- a/css/elements/paper.scss
+++ b/css/elements/paper.scss
@@ -1,13 +1,14 @@
 .paper {
 	display: grid;
 	grid-auto-flow: dense;
-	justify-content: stretch;
-	align-items: stretch;
+	grid-auto-rows: 10vw;
 }
 
 .paper__item {
 	display: inline-block;
 	position: relative;
+	overflow: hidden;
+	padding: 10px;
 	cursor: pointer;
 	transition: box-shadow .25s;
 }
@@ -19,22 +20,23 @@
 	box-shadow: 0 0.4em 1.2em var(--accent-outline-fade);
 }
 
-.paper__item__title {
-	margin: 0;
-	text-align: left;
-	text-align: start;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	font-size: 1em;
-	position: absolute;
-	top: .5em;
-	left: 1em;
-	right: 1em;
-}
-
-.paper__item__image {
+.paper__item__container {
 	display: block;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+}
+
+.paper__item__images {
+	display: block;
+	width: 180%;
+	height: 100%;
+	overflow: hidden;
+	font-size: 0;
+}
+
+.paper__item__images__image {
+	display: inline;
+	max-width: 55.55%;
+	max-height: 100%;
 }
