--- a/css/styles.scss
+++ b/css/styles.scss
@@ -107,6 +107,7 @@ a:focus {
 
 @import "elements/img.scss";
 @import "elements/banner.scss";
+@import "elements/comic.scss";
 @import "elements/dialog.scss";
 @import "elements/paper.scss";
 @import "elements/paginator.scss";
