add "view more" corner prompts

--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -5,5 +5,11 @@
 			<img class="img paper__item__images__image" src="{{ site.url }}{{ image }}">
 			{% endfor %}
 		</div>
+		<div class="paper__item__prompt">
+			<p class="paper__item__prompt__text">
+				<i class="material-icons">arrow_forward</i>
+				<br>View More...
+			</p>
+		</div>
 	</div>
 </a>
