--- a/css/elements/paper.scss
+++ b/css/elements/paper.scss
@@ -22,6 +22,7 @@
 
 .paper__item__container {
 	display: block;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
@@ -39,4 +40,27 @@
 	display: inline;
 	max-width: 55.55%;
 	max-height: 100%;
+}
+
+.paper__item__prompt {
+	display: block;
+	width: 50vw;
+	height: 50vw;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	background: linear-gradient(135deg, transparent, transparent, #FFF);
+}
+
+.paper__item__prompt__text {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	text-align: right;
+	margin: 1em;
+	font-size: 2vw;
+}
+
+.paper__item__prompt__text > i.material-icons {
+	font-size: 3vw;
 }
