bolden corner text

--- a/css/elements/paper.scss
+++ b/css/elements/paper.scss
@@ -59,6 +59,8 @@
 	text-align: right;
 	margin: 1em;
 	font-size: 2vw;
+	font-weight: bolder;
+	color: #000;
 }
 
 .paper__item__prompt__text > i.material-icons {
