--- a/css/elements/comic.scss
+++ b/css/elements/comic.scss
@@ -1,22 +1,80 @@
 .comic {
-
+  position: relative;
+  overflow: hidden;
+  padding: 10px;
+  cursor: pointer;
+  transition: box-shadow .25s;
 }
 
-.comic__panel {
+.comic:hover,
+.comic:focus {
+  outline: none;
+  box-shadow: 0 0.4em 1.2em rgba(0, 72, 117, 0.37);
+  box-shadow: 0 0.4em 1.2em var(--accent-outline-fade);
+}
+
+.comic__container {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.comic__images {
+  display: block;
+  width: 180%;
+  height: 100%;
+  overflow: hidden;
+  font-size: 0;
+}
+
+.comic__images__image {
+  display: inline;
+  max-width: 55.55%;
+  max-height: 100%;
+}
+
+.comic__prompt {
+  display: block;
+  width: 50vw;
+  height: 50vw;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(135deg, transparent, transparent, #FFF);
+}
+
+.comic__prompt__text {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  text-align: right;
+  margin: 1em;
+  font-size: 2vw;
+  font-weight: bolder;
+  color: #000;
+}
+
+.comic__prompt__text > i.material-icons {
+  font-size: 3vw;
+}
+
+.comic--wide__panel {
   display: block;
   width: 100%;
   height: auto;
   user-select: none;
 }
 
-.comic__panel__img {
+.comic--wide__panel__img {
   display: block;
   width: 100%;
   height: auto;
 }
 
 @media(min-width: 1000px) {
-  .comic {
+  .comic--wide {
     display: block;
     height: 300px;
     font-size: 0;
@@ -24,13 +82,13 @@
     white-space: nowrap;
   }
 
-  .comic__panel {
+  .comic--wide__panel {
     display: inline;
     height: 100%;
     width: auto;
   }
 
-  .comic__panel__img {
+  .comic--wide__panel__img {
     display: inline;
     height: 100%;
     width: auto;
