fixed fun webkit scrolling issues

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -106,6 +106,7 @@ a:focus {
 }
 
 @import "elements/img.scss";
+@import "elements/iframe.scss";
 @import "elements/banner.scss";
 @import "elements/comic.scss";
 @import "elements/dialog.scss";
