--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,7 +34,9 @@ layout: default
 	</div>
 	<div id="comic_dialog" class="dialog dialog--hidden">
 		<a id="comic_close" class="dialog__close"><i class="material-icons">close</i></a>
-		<iframe id="comic_iframe" class="dialog__content"></iframe>
+		<div class="dialog__content iframe__container">
+			<iframe id="comic_iframe"></iframe>
+		</div>
 	</div>
 </main>
 
