remove banner margins

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <a href="{{ site.url }}" class="banner">
-	<h1 class="banner__container">
+	<div class="banner__container">
 		<img class="banner__icon" src="{{ site.url }}/images/favicon.svg">
 		&nbsp;
 		<span class="banner__name">{{ site.name }}</span>
-	</h1>
+	</div>
 </a>
