--- a/css/elements/comic.scss
+++ b/css/elements/comic.scss
@@ -1,7 +1,7 @@
 .comic {
   position: relative;
   overflow: hidden;
-  padding: 10px;
+  padding: 1vw;
   cursor: pointer;
   transition: box-shadow .25s;
 }
@@ -42,7 +42,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  background: linear-gradient(135deg, transparent, transparent, #FFF);
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), #FFF);
 }
 
 .comic__prompt__text {
