--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,17 @@ layout: default
 {% include banner.html %}
 
 <main>
-	{{ content }}
+	<div class="paper">
+		{% assign comics = site.comics | sort: "hash" %}
+		{% assign positions = site.positions[page.grid] %}
+		{% assign end = positions.size | minus: 1 %}
+		{% for i in (0..end) %}
+		{% assign position = positions[i] %}
+		{% assign num = page.start | minus: 1 | plus: i %}
+		{% assign comic = comics[num] %}
+		{% include comic.html comic=comic rowStart=position.rowStart rowEnd=position.rowEnd colStart=position.colStart colEnd=position.colEnd %}
+		{% endfor %}
+	</div>
 </main>
 
 <footer class="footer">
