--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -20,28 +20,34 @@
 
 .dialog__close {
 	position: absolute;
-	top: calc(10% + 16px);
+	top: calc(5% - 28px);
 	right: 16px;
 	z-index: 2;
 	user-select: none;
-	padding: 16px;
+	width: 56px;
+	height: 56px;
 
-	background-color: rgba(0, 0, 0, 0);
+	background-color: #FFFFFF;
 	border-radius: 50%;
 	transition: background-color .25s;
 }
 
 .dialog__close:hover {
-	background-color: rgba(0, 0, 0, 0.15);
+	background-color: rgba(255, 255, 255, 0.8);
 }
 
 .dialog__close > .material-icons {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	
 	display: block;
 	transition: transform .25s;
 }
 
 .dialog__close:hover > .material-icons {
-	transform: rotate(90deg);
+	transform: translateX(-50%) translateY(-50%) rotate(90deg);
 }
 
 .dialog__content {
@@ -81,7 +87,7 @@
 
 	.dialog__close {
 		top: calc(4vw + 40px);
-		right: calc(10vw + 40px);
+		right: calc(10vw - 56px);
 	}
 
 	.dialog__content {
